PySCF 1.3 alpha (2016-12-?)
---------------------------
* Added
  - Quantum chemistry ECP for solid
  - AO-direct CCSD
* Improved
  - Optimized CCSD(T)


PySCF 1.2 beta (2016-09-13)
---------------------------
* Added
  - State average CASSCF helper function for mixed spin/spatial-symmetry FCI solvers
  - Example for transition dipole momentum
  - U-CCSD (based on spin-orbital formulation)
  - Function to dump CASSCF canonical orbitals in molden format
  - Analytical Fourier transformation for AO and AO product
  - Iterative augmented hessian (IAH) orbital optimizer
  - Optimized einsum function using numpy.tensordot function
  - Burkatzi-Filippi-Dolg pseudo potential
  - FCI solver to support integrals which do not have 8-fold symmetry
  - Dual interface to call pyFFTW or numpy.fft
  - Maximum overlap method (MOM) method for SCF method
* Improved
  - Memory usage for MDF method (molecular and PBC systems)
  - PBC AO value evaluation performance
  - Orbitals space symmetrization
  - CASSCF subspace (core, active, external) symmetrization
  - Created X2C object to hold X2C functions and parameters
  - Boys, Edmiston, Pipek-Mezey Localization with general IAH optimizer
  - PBC integrals to handle ghost atom in PBC calculation
  - Asynchronized IO to overlap integration and IO for ao2mo integral transformation
  - SCF gradients to eliminate the symmetry forbidden matrix elements
  - Fixing orbital ordering for degenerated SCF orbitals
  - Efficiency of transpose_sum function
  - FCIDUMP output format
* Bugfix
  - CASSCF/QMMM interface for the missing term in nuclear repulsion
  - Screening small density for MGGA functionals
  - Molden interface to handle symmetry broken orbitals
  - MP2 density matrix to include HF DM


PySCF 1.2 alpha (2016-8-5)
--------------------------
* Added
  - MDF method for molecule and PBC 2-election integrals
  - GAMESS WFN wirter
  - Periodic boundary condition (PBC) for gamma point RHF, UHF, RKS, UKS